test/fixtures/configs/projects/patch/update/fail/error.js
module.exports = {
  url: '/users/1/projects/1',
  method: 'patch',
  payload: {
    title: 'new'
  },
  headers: {
    authorization: 'token userToken'
  }
};
